# rust-orderbook-lambda

./: .env  .gitignore  Cargo.toml  README.md  analytics.sql  deploy.sh  recovery-event.json  samconfig.toml  template.yaml
.aws-sam/: build.toml
data/orderbook/year=2025/month=09/day=03/hour=01/: 1756862086983.json  1756862087092.json  1756862087197.json  1756862087305.json  1756862087418.json  1756862087528.json  1756862087637.json  1756862087743.json  1756862087876.json  1756862087990.json
src/: main.rs  recovery.rs
tests/: test-binance.sh  test-event.json
